syntax = "proto3";


message DepositRequest {
	int32 customer_id = 1;
	int32 msg_id = 2;
	int32 amount = 3;
}
message DepositReply {
	bool status = 1; // true if not frozen, and will try to execute
}


message WithdrawalRequest {
	int32 customer_id = 1;
	int32 request_id = 2;
	int32 amount = 3;
}
message WithdrawalReply {
	bool status = 1; // true if not frozen, and will try to execute
}

message ReadBalanceRequest {
	int32 customer_id = 1;
	int32 request_id = 2;
}
message ReadBalanceReply {
	bool status = 1; // true if not frozen; discard value otherwise
	int32 balance = 2;
}


service BankService {
	rpc ReadBalance(ReadBalanceRequest) returns (ReadBalanceReply);
	rpc Withdrawal(WithdrawalRequest) returns (WithdrawalReply);
	rpc Deposit(DepositRequest) returns (DepositReply);
}